--- a/package.json
+++ b/package.json
@@ -1,14 +1,18 @@
 {
   "name": "todo",
+  "homepage": "https://vadimerokhin.github.io/mindbox",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "test": "vitest"
+    "test": "vitest",
+    "start": "vite"
   },
   "dependencies": {
     "react": "^18.2.0",
@@ -27,6 +31,7 @@
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
+    "gh-pages": "^6.1.1",
     "jsdom": "^24.0.0",
     "typescript": "^5.2.2",
     "vite": "^5.2.0",
